data/derived/comb/progs/unify/prog8653.ml.out
Characters 84-88:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
